2012-11-04  James Hunt  <james.hunt@ubuntu.com>

	* AUTHORS: Corrected email address.
	* man/procenv.1: Credit Kees in copyright and add in
	  standard "warranty".

2012-11-01  James Hunt  <james.hunt@ubuntu.com>

	* Hide show_oom() for non-Linux platforms.

2012-10-27  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - get_path(): New function to return path of specified program.
	  - show_stat(): Ensure we can resolve argv[0] to a full
	    path by using get_path().
	  - check_envvars(): Made strsep() usage safe.

2012-10-26  James Hunt  <james.hunt@ubuntu.com>

	* Set EXTRA_DIST to ensure man page
	  included in distribution.
	* man/procenv.1: Typos and hyphen fixes.

2012-10-25  James Hunt  <james.hunt@ubuntu.com>

	* Initial import.